[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/CatEditor.gd" type="Script" id=1]
[ext_resource path="res://altar.png" type="Texture" id=2]

[node name="CatEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="Screen" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Sidebar" type="Panel" parent="Screen"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 250.0
margin_bottom = 300.0

[node name="AddButton" type="Button" parent="Screen/Sidebar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = 28.0
text = "+"

[node name="CatList" type="ItemList" parent="Screen/Sidebar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -269.0
margin_right = 117.0
margin_bottom = 290.0

[node name="ListLabel" type="RichTextLabel" parent="Screen/Sidebar"]
margin_left = 9.0
margin_top = 15.0
margin_right = 49.0
margin_bottom = 30.0
text = "Cats:"

[node name="Save" type="Button" parent="Screen/Sidebar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -93.0
margin_top = 4.0
margin_right = -37.0
margin_bottom = 28.0
text = "Save"

[node name="MainPanel" type="Panel" parent="Screen"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -675.0
margin_top = -301.0
margin_bottom = 299.0

[node name="CatNameLabel" type="RichTextLabel" parent="Screen/MainPanel"]
margin_left = 11.0
margin_top = 8.0
margin_right = 131.0
margin_bottom = 56.0
text = "Name:"

[node name="CatName" type="LineEdit" parent="Screen/MainPanel/CatNameLabel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_right = 109.0
margin_bottom = -7.0

[node name="CatRarityLabel" type="RichTextLabel" parent="Screen/MainPanel"]
margin_left = 11.0
margin_top = 59.0
margin_right = 131.0
margin_bottom = 107.0
text = "Rarity"

[node name="CatRarity" type="OptionButton" parent="Screen/MainPanel/CatRarityLabel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_right = 109.0
margin_bottom = -7.0
text = "COMMON"

[node name="CatImageLabel" type="RichTextLabel" parent="Screen/MainPanel"]
margin_left = 11.0
margin_top = 115.0
margin_right = 127.0
margin_bottom = 163.0
text = "Summon Image"

[node name="CatImageBrowse" type="Button" parent="Screen/MainPanel/CatImageLabel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_right = 109.0
margin_bottom = -7.0
text = "..."

[node name="ImageDialog" type="FileDialog" parent="Screen/MainPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -157.0
margin_right = 239.0
margin_bottom = 157.0
window_title = "Open a File"
mode = 0
current_dir = "res://cats"
current_path = "res://cats/"

[node name="CatStoryLabel" type="RichTextLabel" parent="Screen/MainPanel"]
margin_left = 11.0
margin_top = 169.0
margin_right = 255.0
margin_bottom = 406.0
text = "Story:"

[node name="CatStory" type="TextEdit" parent="Screen/MainPanel/CatStoryLabel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.0
margin_top = 19.0
margin_right = 100.0
margin_bottom = 228.0
show_line_numbers = true
wrap_enabled = true
caret_block_mode = true

[node name="Altar" type="TextureRect" parent="Screen/MainPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -298.0
margin_top = -298.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Summon" type="TextureRect" parent="Screen/MainPanel/Altar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -60.0
margin_right = 100.0
margin_bottom = 140.0
expand = true
stretch_mode = 5

[node name="NextLevelButton" type="Button" parent="Screen/MainPanel/Altar"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_right = 51.0
margin_bottom = 30.0
disabled = true
text = "Next Level"

[connection signal="pressed" from="Screen/Sidebar/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="item_selected" from="Screen/Sidebar/CatList" to="." method="_on_CatList_item_selected"]
[connection signal="pressed" from="Screen/Sidebar/Save" to="." method="_on_Save_pressed"]
[connection signal="text_changed" from="Screen/MainPanel/CatNameLabel/CatName" to="." method="_on_CatName_text_changed"]
[connection signal="item_selected" from="Screen/MainPanel/CatRarityLabel/CatRarity" to="." method="_on_CatRarity_item_selected"]
[connection signal="pressed" from="Screen/MainPanel/CatImageLabel/CatImageBrowse" to="." method="_on_CatImageBrowse_pressed"]
[connection signal="file_selected" from="Screen/MainPanel/ImageDialog" to="." method="_on_ImageDialog_file_selected"]
[connection signal="focus_exited" from="Screen/MainPanel/CatStoryLabel/CatStory" to="." method="_on_CatStory_focus_exited"]
